    it e.g., with something like:

    #+begin_src elisp
      (require 'mu4e-transient)
      (global-set-key (kbd "C-c m") #'mu4e-transient-menu)
    #+end_src
    This is will change/improve, but is already quite useful.

  - Various Gnus' mailing list commands are now available in the mu4e message
    view as well, such as ~gnus-mailing-list-subscribe~,
    ~gnus-mailing-list-unsubscribe~.


* 1.12 (released on February 24, 2024)

** Some highlights

  - Significant speedups in both ~mu~ and ~mu4e~
  - Reworked message composition, closer to its Gnus origins which adds many of
    its features
  - Overhauled the query parser; squashing a number of bugs/limitations, incl.
    dealing with CJK messages
  - Experimental folding of message threads
  - Better and faster indexing of HTML messages
  - Experimental search by (human) language wit CLD2

  For details & more, see below. Note that a few minor new features were added
  _after_ the initial 1.12.0.

*** mu

    - new command ~mu move~ to move messages across maildirs and/or change their
      flags. See the man-page for all the details.

    - ~mu~ commands ~extract~ ~verify~ and ~view~ can now read the message from
      standard input; see their man-pages for details

    - ~mu init~ gained the ~--ignored-address~ option for email-addresses / regexps
      that should _not_ be included in the contacts-cache (i.e., for ~mu cfind~ and
      Mu4e address completion). See the ~mu-init~ manpage for details.

      It's not unusual for ~noreply~-type e-mail addresses to be the majority in
      an e-mail corpus; to get rid of those, with something like
      ~--ignored-address=/.*no.*reply.*/~

    - what used to be the ~mu fields~ command has been merged into ~mu info~; i.e.,
      ~mu fields~ is now ~mu info fields~.

    - ~mu view~ gained ~--format=html~ which compels it to output the HTML body of
      the message rather than the (default) plain-text body. See its updated
      manpage for details.
